--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "clotheme-api",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -9,6 +10,10 @@
     "node": ">=18"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "openai": "^4.50.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1"
   }
 }
+
